--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -51,7 +51,7 @@ input {
   color: #808080;
   font-family: Montserrat;
   font-size: 16px;
-  line-height: 1.5; /* 150% */
+  line-height: 1.5;
   letter-spacing: 0.04em;
   margin-right: 8px;
 }
@@ -69,7 +69,7 @@ button {
   font-family: Montserrat;
   font-size: 16px;
   font-weight: 500;
-  line-height: 1.5; /* 150% */
+  line-height: 1.5;
   letter-spacing: 0.04em;
 }
 
