--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,18 +24,10 @@
 a {
   text-decoration: none;
 }
-ul,
-ol {
-  list-style-type: none;
-  margin: 0;
-  padding-left: 0;
-}
+
 li {
   margin: 0;
   padding-left: 0;
-}
-img {
-  display: block;
 }
 
 form {
@@ -51,7 +43,7 @@ input {
   color: #808080;
   font-family: Montserrat;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.5; /* 150% */
   letter-spacing: 0.04em;
   margin-right: 8px;
 }
